--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "html-loader": "^0.4.3",
     "html-webpack-harddisk-plugin": "^0.1.0",
     "html-webpack-plugin": "^2.9.0",
-    "jquery": "^1.12.0",
+    "jquery": "^1.12.4",
     "less": "^2.6.0",
     "less-loader": "^2.2.2",
     "raw-loader": "^0.5.1",
@@ -31,8 +31,11 @@
   "dependencies": {
     "http-server": "^0.11.1",
     "jquery-countdown": "^2.2.0",
+    "js-cookie": "^2.2.0",
     "lesshat": "^4.1.0",
+    "query-string": "^6.1.0",
     "slick-carousel": "^1.6.0",
-    "swiper": "^3.4.2"
+    "swiper": "^3.4.2",
+    "url-parse": "^1.4.1"
   }
 }
