--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "http-server": "^0.11.1",
+    "jquery-confirm": "^3.3.2",
     "jquery-countdown": "^2.2.0",
     "js-cookie": "^2.2.0",
     "lesshat": "^4.1.0",
