--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "raw-loader": "^0.5.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
+    "web3-loader": "^1.1.2",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "crypto-js": "^3.1.9-1",
     "http-server": "^0.11.1",
     "jquery-confirm": "^3.3.2",
     "jquery-countdown": "^2.2.0",
@@ -37,6 +39,7 @@
     "query-string": "^6.1.0",
     "slick-carousel": "^1.6.0",
     "swiper": "^3.4.2",
-    "url-parse": "^1.4.1"
+    "url-parse": "^1.4.1",
+    "web3": "^1.0.0-beta.34"
   }
 }
