--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
   },
   "author": "lambda-fed",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-latest": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "cross-env": "^3.1.4",
     "css-loader": "^0.23.1",
     "ejs-loader": "^0.3.0",
@@ -30,6 +36,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "crypto-js": "^3.1.9-1",
     "http-server": "^0.11.1",
     "jquery-confirm": "^3.3.2",
