--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "query-string": "^6.1.0",
     "slick-carousel": "^1.6.0",
     "swiper": "^3.4.2",
+    "uglifyjs-webpack-plugin": "^1.2.7",
     "url-parse": "^1.4.1",
     "web3": "^1.0.0-beta.34"
   }
