--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-dev-server": "^1.14.1"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^4.5.2",
     "http-server": "^0.11.1",
     "imagemin-webpack-plugin": "^2.2.0",
     "jquery-countdown": "^2.2.0",
