--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
   },
   "dependencies": {
     "copy-webpack-plugin": "^4.5.2",
+    "html-minifier": "^3.5.20",
     "http-server": "^0.11.1",
     "imagemin-webpack-plugin": "^2.2.0",
     "jquery-countdown": "^2.2.0",
     "lesshat": "^4.1.0",
     "slick-carousel": "^1.6.0",
     "swiper": "^3.4.2",
-    "uglifyjs-webpack-plugin": "^1.3.0"
+    "uglifyjs-webpack-plugin": "^1.3.0",
+    "webpack-manifest-plugin": "1.3.2"
   }
 }
