--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "babel-polyfill": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "copy-webpack-plugin": "^4.5.2",
+    "ejs-compiled-loader": "^1.1.0",
     "html-minifier": "^3.5.20",
     "http-server": "^0.11.1",
     "imagemin-webpack-plugin": "^2.2.0",
     "jquery-countdown": "^2.2.0",
     "lesshat": "^4.1.0",
+    "markdown-loader": "^4.0.0",
     "query-string": "^6.1.0",
     "slick-carousel": "^1.6.0",
     "swiper": "^3.4.2",
