--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "jquery-countdown": "^2.2.0",
     "lesshat": "^4.1.0",
     "markdown-loader": "^4.0.0",
-    "query-string": "^6.1.0",
+    "query-string": "5",
     "slick-carousel": "^1.6.0",
     "swiper": "^3.4.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
