--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "markdown-loader": "^4.0.0",
     "query-string": "5",
     "slick-carousel": "^1.6.0",
+    "swiper": "^4.3.5",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack-manifest-plugin": "1.3.2"
   }
