--- a/package.json
+++ b/package.json
@@ -40,11 +40,12 @@
     "http-server": "^0.11.1",
     "imagemin-webpack-plugin": "^2.2.0",
     "jquery-countdown": "^2.2.0",
+    "json-loader": "^0.5.7",
     "lesshat": "^4.1.0",
     "markdown-loader": "^4.0.0",
     "query-string": "5",
     "slick-carousel": "^1.6.0",
-    "swiper": "^4.3.5",
+    "swiper": "4.3.5",
     "uglifyjs-webpack-plugin": "^1.3.0",
     "webpack-manifest-plugin": "1.3.2"
   }
