--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "html-minifier": "^3.5.20",
     "http-server": "^0.11.1",
     "imagemin-webpack-plugin": "^2.2.0",
+    "jquery-confirm": "^3.3.2",
     "jquery-countdown": "^2.2.0",
     "json-loader": "^0.5.7",
     "lesshat": "^4.1.0",
     "markdown-loader": "^4.0.0",
+    "moment": "^2.22.2",
     "query-string": "5",
     "slick-carousel": "^1.6.0",
     "swiper": "4.3.5",
